ecmascript/parser/tests/test262-error-references/fail/8262e85f06cb459c.js.stderr
error: Unexpected token `.`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/8262e85f06cb459c.js:1:10
  |
1 | new f(....g);
  |          ^

